--- a/cra_250411_baseball/cra_250411_baseball.vcxproj.filters
+++ b/cra_250411_baseball/cra_250411_baseball.vcxproj.filters
@@ -25,4 +25,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="baseball_test.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
